# Vibecoding

./: .env.example  .gitignore  Code.js  README.md  dev.db  package-lock.json  package.json  requirements.txt  server.js  tailwind.config.js  tsconfig.json  xml_breadcrumbs_to_xlsx.py
accounts/: apps.py  authentication.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/: pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: authentication.py  pagination.py
backend/core/management/commands/: ensure_env.py
backend/core/middleware/: jwt_auth.py
backend/core/utils/: env.py  jwt.py
backend/items/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/items/migrations/: 0001_initial.py
backend/scraper/: services.py  urls.py  views.py
backend/suggestions/: __init__.py  admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/suggestions/migrations/: 0001_initial.py
backend/sync/: admin.py  engine.py  models.py  services.py  tasks.py  urls.py  views.py
backend/sync/management/commands/: run_sync.py  seed.py
backend/sync/migrations/: 0001_initial.py
backend/tests/: test_items.py  test_suggestions.py  test_sync_service.py
config/: settings.py  urls.py
data/: fallback-games.json
frontend/: apps.py  urls.py  views.py
google-apps-script/: Code.gs
items/: filters.py  models.py  serializers.py  services.py  urls.py  (+2 more)
(+82 files in other folders)
