[project]
name = "ggsel-backend"
version = "0.1.0"
description = "Backend for GGSEL item management"
authors = [{name = "Vibecoding"}]
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.14",
  "django-filter>=24.0",
  "drf-spectacular>=0.27",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.1",
  "argon2-cffi>=23.0",
  "djangorestframework-simplejwt>=5.3",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "selectolax>=0.3",
  "redis>=5.0",
  "django-redis>=5.4",
  "apscheduler>=3.10",
  "python-dateutil>=2.8"
]

[project.optional-dependencies]
celery = [
  "celery>=5.3",
]

[tool.setuptools]
packages = [
  "backend",
  "core",
  "accounts",
  "items",
  "suggestions",
  "sync",
  "scraper",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
